--- a/index.html
+++ b/index.html
@@ -324,7 +324,23 @@
           <img src="./static/images/humaneval_line_chart.png" alt="Evaluation Results"
             class="rounded-lg w-full h-auto shadow-md">
           <div class="mt-4 text-gray-600">
-            <span class="font-bold text-primary">Figure 3:</span> cores assigned by human annotators for object generations of increasing complexity. For example, “2-part” refers to generating objects using two provided image-text pairs.
+            <span class="font-bold text-primary">Figure 3:</span> Scores assigned by human annotators for object generations of increasing complexity. For example, “2-part” refers to generating objects using two provided image-text pairs.
+          </div>
+        </div>
+
+        <div class="paper-card p-6 rounded-xl">
+          <img src="./static/images/fid-kid-table.png" alt="Evaluation Results"
+            class="rounded-lg w-full h-auto shadow-md">
+          <div class="mt-4 text-gray-600">
+            <span class="font-bold text-primary">Table 1:</span> Generation quality comparison across Animals and Vehicles with different part counts. Lower is better for FID and KID.
+          </div>
+        </div>
+
+        <div class="paper-card p-6 rounded-xl">
+          <img src="./static/images/humaneval-parteval-table.png" alt="Evaluation Results"
+            class="rounded-lg w-full h-auto shadow-md">
+          <div class="mt-4 text-gray-600">
+            <span class="font-bold text-primary">Table 2:</span> Comparison across Animals and Vehicles using PartEval (automatic part-level fidelity metric) and Human Evaluation. Higher is better.
           </div>
         </div>
 
