--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               </span>
             </div>
           </a>
-          <a href="https://scholar.google.com/citations?user=vjZrDKQAAAAJ&hl=en">
+          <a href="https://faculty.cc.gatech.edu/~hays/">
             <div class="author-chip px-4 py-2 rounded-full text-sm font-medium flex items-center">
               <img src="https://ui-avatars.com/api/?name=James+Hays&background=4F46E5&color=fff"
                 class="w-6 h-6 rounded-full mr-2">
@@ -202,14 +202,14 @@
             </div>
           </a>
         </div>
-        
+
         <!-- Institutions line -->
         <div class="flex flex-wrap justify-center gap-6 text-gray-500 mb-8 text-sm">
           <div><sup>1</sup> Arizona State University</div>
           <div><sup>2</sup> Georgia Institute of Technology</div>
           <div><sup>3</sup> Google Deepmind</div>
         </div>
-        
+
 
         <div class="flex flex-wrap justify-center gap-4">
           <a href="#" class="paper-card px-6 py-3 rounded-lg flex items-center">
@@ -324,7 +324,9 @@
           <img src="./static/images/humaneval_line_chart.png" alt="Evaluation Results"
             class="rounded-lg w-full h-auto shadow-md">
           <div class="mt-4 text-gray-600">
-            <span class="font-bold text-primary">Figure 3:</span> Scores assigned by human annotators for object generations of increasing complexity. For example, “2-part” refers to generating objects using two provided image-text pairs.
+            <span class="font-bold text-primary">Figure 3:</span> Scores assigned by human annotators for object
+            generations of increasing complexity. For example, “2-part” refers to generating objects using two provided
+            image-text pairs.
           </div>
         </div>
 
@@ -332,7 +334,8 @@
           <img src="./static/images/fid-kid-table.png" alt="Evaluation Results"
             class="rounded-lg w-full h-auto shadow-md">
           <div class="mt-4 text-gray-600">
-            <span class="font-bold text-primary">Table 1:</span> Generation quality comparison across Animals and Vehicles with different part counts. Lower is better for FID and KID.
+            <span class="font-bold text-primary">Table 1:</span> Generation quality comparison across Animals and
+            Vehicles with different part counts. Lower is better for FID and KID.
           </div>
         </div>
 
@@ -340,7 +343,8 @@
           <img src="./static/images/humaneval-parteval-table.png" alt="Evaluation Results"
             class="rounded-lg w-full h-auto shadow-md">
           <div class="mt-4 text-gray-600">
-            <span class="font-bold text-primary">Table 2:</span> Comparison across Animals and Vehicles using PartEval (automatic part-level fidelity metric) and Human Evaluation. Higher is better.
+            <span class="font-bold text-primary">Table 2:</span> Comparison across Animals and Vehicles using PartEval
+            (automatic part-level fidelity metric) and Human Evaluation. Higher is better.
           </div>
         </div>
 
